--- a/styles/style.scss
+++ b/styles/style.scss
@@ -173,7 +173,7 @@
         width: 447.06px;
         height: 274px;
         position: absolute;
-        background-image: url(../assets/icons/line-group__mobile-app.svg);
+        background-image: url(../assets/icons/line-group__mobile-app.png);
         background-size: 100%;
         background-repeat: no-repeat;
         top: 52px;
@@ -321,7 +321,7 @@
         transform: rotate(-34.21deg);
     }
     &::after {
-        background-image: url(../assets/icons/line-group__mobile-app.svg);
+        background-image: url(../assets/icons/line-group__mobile-app.png);
         width: 447.06px;
         height: 280px;
         transform: scale(-1, 1);
@@ -377,11 +377,12 @@
                 position: absolute;
                 background-size: 100%;
                 background-repeat: no-repeat;
-                background-image: url(../assets/icons/line__admin-panel_2.svg);
+                background-image: url(../assets/icons/line__admin-panel_2.png);
                 width: 223.07px;
                 height: 178.61px;
                 right: calc(100% + 26px);
                 bottom: -20px;
+                transform: matrix(-0.98, 0.2, 0.2, 0.98, 0, 0);
                }
            } 
         }
@@ -394,7 +395,7 @@
                  position: absolute;
                  background-size: 100%;
                  background-repeat: no-repeat;
-                 background-image: url(../assets/icons/icon-group__admin-panel.svg);
+                 background-image: url(../assets/icons/icon-group__admin-panel.png);
                  width: 227.37px;
                  height: 211.73px;
                  right: -201px;
@@ -406,7 +407,7 @@
                     position: absolute;
                     background-size: 100%;
                     background-repeat: no-repeat;
-                    background-image: url(../assets/icons/text-icon__admin-panel.svg);
+                    background-image: url(../assets/icons/text-icon__admin-panel.png);
                     width: 204px;
                     height: 157px;
                     left: -100px;
@@ -436,7 +437,7 @@
                     position: absolute;
                     background-size: 100%;
                     background-repeat: no-repeat;
-                    background-image: url(../assets/icons/line-group__mobile-app.svg);
+                    background-image: url(../assets/icons/line-group__mobile-app.png);
                     width: 415.45px;
                     height: 398.83px;
                     right: -239px;
@@ -1955,14 +1956,14 @@
         position: relative;
         &::before {
             content: '';
-            background-image: url(../assets/icons/line-group__mobile-app.svg);
+            background-image: url(../assets/icons/line-group__mobile-app.png);
             width: 314px;
             height: 248px;
             background-repeat: no-repeat;
             background-size: 100%;
             position: absolute;
             bottom: 0;
-            right: -60px;
+            right: 0;
         }
         .title {
             &::before {
@@ -2672,11 +2673,11 @@
         }
         .iframe-wrapper {
             margin: 24px 0 80px;
-            width: 365px;
-            height: 255px;
+            width: 400px;
+            height: 290px;
             border-radius: 15px;
             position: relative;
-            left: 20px;
+            left: 50px;
             box-shadow: 17.3896px 26.0844px 34.7793px rgba(62, 68, 128, 0.25), inset -0.869482px -4.34741px 8.69482px rgba(102, 131, 188, 0.25), inset 4.34741px 0.869482px 8.69482px #FFFFFF;
             &::before,
             &::after {
@@ -2689,8 +2690,8 @@
                 }
             }
             iframe {
-                width: 342.71px;
-                height: 235px;
+                width: 377.71px;
+                height: 270px;
                 border-radius: 12px;
             }
         }
@@ -2776,6 +2777,7 @@
                 min-width: 280px;
                 height: 280px;
                 left: -125px;
+                transform: translateX(0);
                 &::before {
                     width: 269.35px;
                     height: 103.11px;
@@ -2793,7 +2795,7 @@
                 min-width: 230px;
                 height: 240px;
                 right: 0;
-                transform: translateX(calc(50vw + 100px));
+                transform: translateX(0);
                 &::before {
                     width: 261.99px;
                     height: 134.35px;
@@ -2809,6 +2811,7 @@
             .first-text,
             .second-text {
                 justify-content: flex-start;
+                opacity: 1;
                 .h7 {
                     margin-bottom: 8px;
                 }
