--- a/styles/style.scss
+++ b/styles/style.scss
@@ -42,6 +42,17 @@
             border-radius: 15px;
             border: 1px solid $blue2;
             visibility: hidden;
+            &::before {
+                content: '';
+                background-repeat: no-repeat;
+                background-image: url(../assets/icons/cloud__mobile-app.svg);
+                background-size: 100%;
+                width: 126px;
+                height: 123px;
+                position: absolute;
+                right: 4px;
+                bottom: 12px;
+            }
             a {
                 text-decoration: none;
                 &:not(:last-child) {
