Fixed height popup again

--- a/styles/style.css
+++ b/styles/style.css
@@ -3161,6 +3161,7 @@ a:hover {
   }
   .header__menu .menu-popup {
     width: 100vw;
+    height: 100vh;
     position: fixed;
     top: 0;
     right: 0;
