--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2368,7 +2368,7 @@
             margin-left: 27px;
             .menu-popup {
                 width: 100vw;
-                // height: 100vh;
+                height: 100vh;
                 position: fixed;
                 top: 0;
                 right: 0;
