Changed form color

--- a/styles/style.css
+++ b/styles/style.css
@@ -1704,7 +1704,7 @@ a:hover {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background-color: #66D1FC;
+  background-color: #33ccff;
   position: relative;
   padding: 109px 0 103px;
   height: 417px;
