--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1007,7 +1007,7 @@
 .contact-form {
     display: flex;
     justify-content: center;
-    background-color: $blue2;
+    background-color: #33ccff;
     position: relative;
     padding: 109px 0 103px;
     height: 417px;
