--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1007,7 +1007,7 @@
 .contact-form {
     display: flex;
     justify-content: center;
-    background-color: #33ccff;
+    background-color: $blue2;
     position: relative;
     padding: 109px 0 103px;
     height: 417px;
@@ -2758,7 +2758,7 @@
                 }
             }
             iframe {
-                width: 316.35px;
+                width: 317.35px;
                 height: 237.52px;
                 border-radius: 12px;
             }
