--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,8 +1,8 @@
 // color
 
-$blue1: #3DBBEE;
-$blue2: #66D1FC; 
-$blue3: #82D9FC;
+$blue1: #33ccff;
+$blue2: #33ccff; 
+$blue3: #33ccff;
 $white: #FFFFFF;
 $gray-lite: #FBFBFB;
 $gray-dark: #B6B6B6;
