--- a/styles/main.css
+++ b/styles/main.css
@@ -95,7 +95,7 @@ input {
   line-height: 180%;
   letter-spacing: -0.01em;
   font-family: 'Active Grotesk Corp';
-  outline-color: #66D1FC;
+  outline-color: #33ccff;
 }
 
 input::-webkit-input-placeholder {
@@ -131,7 +131,7 @@ button {
   height: 65px;
   border-radius: 5px;
   border: none;
-  background-color: #66D1FC;
+  background-color: #33ccff;
   color: #FFFFFF;
   cursor: pointer;
 }
@@ -170,7 +170,7 @@ button:hover {
 
 .font_pips {
   font-family: 'PIPS';
-  color: #66D1FC;
+  color: #33ccff;
 }
 
 .block_100vw {
@@ -191,7 +191,7 @@ button:hover {
 }
 
 .font-color_blue {
-  color: #66D1FC;
+  color: #33ccff;
 }
 
 * {
