--- a/styles/style.css
+++ b/styles/style.css
@@ -4160,4 +4160,274 @@ a:hover {
     right: 0;
   }
 }
+
+.animation-block {
+  position: absolute;
+  background-color: white;
+}
+
+.mobile-app .animation-block-1 {
+  width: 240px;
+  height: 20px;
+  top: -28px;
+  right: -37px;
+}
+
+.mobile-app .animation-block-2 {
+  width: 40px;
+  height: 43px;
+  bottom: 0px;
+  left: 220px;
+}
+
+.mobile-app .animation-block-3 {
+  width: 258px;
+  height: 20px;
+  top: 32px;
+  left: -28px;
+}
+
+.mobile-app .animation-block-4 {
+  width: 26px;
+  height: 40px;
+  top: 1px;
+  left: -45px;
+}
+
+@media (max-width: 1024px) {
+  .mobile-app .animation-block-1 {
+    width: 176px;
+    height: 20px;
+    top: -22px;
+    right: -7px;
+  }
+  .mobile-app .animation-block-2 {
+    width: 14px;
+    height: 33px;
+    bottom: 1px;
+    left: 189px;
+  }
+  .mobile-app .animation-block-3 {
+    width: 193px;
+    height: 20px;
+    top: 21px;
+    left: -4px;
+  }
+  .mobile-app .animation-block-4 {
+    width: 18px;
+    height: 33px;
+    top: 4px;
+    left: -22px;
+  }
+}
+
+@media (max-width: 767px) {
+  .mobile-app .animation-block-1 {
+    width: 157px;
+    height: 20px;
+    top: -22px;
+    right: -7px;
+  }
+  .mobile-app .animation-block-2 {
+    width: 14px;
+    height: 32px;
+    bottom: 4px;
+    left: 167px;
+  }
+  .mobile-app .animation-block-3 {
+    width: 171px;
+    height: 20px;
+    top: 19px;
+    left: -4px;
+  }
+  .mobile-app .animation-block-4 {
+    width: 18px;
+    height: 33px;
+    top: 1px;
+    left: -22px;
+  }
+}
+
+.booking-panel .animation-block-1 {
+  width: 237px;
+  height: 33px;
+  top: -34px;
+  right: -45px;
+}
+
+.booking-panel .animation-block-2 {
+  width: 40px;
+  height: 43px;
+  bottom: -10px;
+  left: 197px;
+}
+
+.booking-panel .animation-block-3 {
+  width: 222px;
+  height: 23px;
+  top: 38px;
+  left: -25px;
+}
+
+.booking-panel .animation-block-4 {
+  width: 26px;
+  height: 50px;
+  top: 3px;
+  left: -51px;
+}
+
+@media (max-width: 1024px) {
+  .booking-panel .animation-block {
+    display: none;
+  }
+}
+
+@media (max-width: 767px) {
+  .booking-panel .animation-block {
+    display: block;
+  }
+  .booking-panel .animation-block-1 {
+    width: 152px;
+    height: 25px;
+    top: -27px;
+    right: -15px;
+  }
+  .booking-panel .animation-block-2 {
+    width: 20px;
+    height: 29px;
+    bottom: -2px;
+    left: 145px;
+  }
+  .booking-panel .animation-block-3 {
+    width: 149px;
+    height: 23px;
+    top: 24px;
+    left: -3px;
+  }
+  .booking-panel .animation-block-4 {
+    width: 21px;
+    height: 35px;
+    top: 3px;
+    left: -24px;
+  }
+}
+
+.main-baner .animation-block {
+  display: none;
+}
+
+@media (max-width: 767px) {
+  .main-baner .animation-block {
+    display: block;
+  }
+  .main-baner .animation-block-1 {
+    width: 67px;
+    height: 8px;
+    top: 89px;
+    right: 188px;
+    -webkit-transform: rotate(-8deg);
+            transform: rotate(-8deg);
+  }
+  .main-baner .animation-block-5 {
+    width: 64px;
+    height: 8px;
+    top: 89px;
+    right: 124px;
+    -webkit-transform: rotate(8deg);
+            transform: rotate(8deg);
+  }
+  .main-baner .animation-block-2 {
+    width: 17px;
+    height: 30px;
+    bottom: 10px;
+    left: 141px;
+    -webkit-transform: rotate(12deg);
+            transform: rotate(12deg);
+  }
+  .main-baner .animation-block-3 {
+    width: 144px;
+    height: 55px;
+    top: 94px;
+    left: -4px;
+    border-bottom: 17px solid white;
+    border-radius: 47%;
+    -webkit-transform: rotate(-3deg);
+            transform: rotate(-3deg);
+    background-color: transparent;
+  }
+  .main-baner .animation-block-4 {
+    width: 15px;
+    height: 26px;
+    top: 107px;
+    left: -14px;
+  }
+}
+
+.admin-panel .animation-block {
+  display: none;
+}
+
+@media (max-width: 767px) {
+  .admin-panel .animation-block {
+    display: block;
+  }
+  .admin-panel .animation-block-1 {
+    width: 100px;
+    height: 17px;
+    top: -16px;
+    right: -18px;
+  }
+  .admin-panel .animation-block-2 {
+    width: 28px;
+    height: 35px;
+    bottom: 1px;
+    left: 76px;
+  }
+  .admin-panel .animation-block-3 {
+    width: 104px;
+    height: 11px;
+    top: 20px;
+    left: -28px;
+  }
+  .admin-panel .animation-block-4 {
+    width: 19px;
+    height: 27px;
+    top: 3px;
+    left: -47px;
+  }
+}
+
+.advantages .animation-block {
+  display: none;
+}
+
+@media (max-width: 767px) {
+  .advantages .animation-block {
+    display: block;
+  }
+  .advantages .animation-block-1 {
+    width: 123px;
+    height: 17px;
+    top: -16px;
+    right: -14px;
+  }
+  .advantages .animation-block-2 {
+    width: 22px;
+    height: 32px;
+    bottom: 5px;
+    left: 112px;
+  }
+  .advantages .animation-block-3 {
+    width: 136px;
+    height: 13px;
+    top: 20px;
+    left: -20px;
+  }
+  .advantages .animation-block-4 {
+    width: 19px;
+    height: 27px;
+    top: 2px;
+    left: -39px;
+  }
+}
 /*# sourceMappingURL=style.css.map */
