--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3345,3 +3345,271 @@
         }
     }
 }
+
+.animation-block {
+    position: absolute;
+    // background-color: red;
+    // opacity: 0.5;
+    background-color: white;
+}
+
+.mobile-app {
+    .animation-block-1{
+        width: 240px;
+        height: 20px;
+        top: -28px;
+        right: -37px;
+    }
+    .animation-block-2 {
+        width: 40px;
+        height: 43px;
+        bottom: 0px;
+        left: 220px;
+    }
+    .animation-block-3 {
+        width: 258px;
+        height: 20px;
+        top: 32px;
+        left: -28px;
+    }
+    .animation-block-4 {
+        width: 26px;
+        height: 40px;
+        top: 1px;
+        left: -45px;
+    }
+
+    @media (max-width: 1024px) {
+        .animation-block-1{
+            width: 176px;
+            height: 20px;
+            top: -22px;
+            right: -7px;
+        }
+        .animation-block-2 {
+            width: 14px;
+            height: 33px;
+            bottom: 1px;
+            left: 189px;
+        }
+        .animation-block-3 {
+            width: 193px;
+            height: 20px;
+            top: 21px;
+            left: -4px;
+        }
+        .animation-block-4 {
+            width: 18px;
+            height: 33px;
+            top: 4px;
+            left: -22px;
+        }
+    }
+
+    @media (max-width: 767px) {
+        .animation-block-1{
+            width: 157px;
+            height: 20px;
+            top: -22px;
+            right: -7px;
+        }
+        .animation-block-2 {
+            width: 14px;
+            height: 32px;
+            bottom: 4px;
+            left: 167px;
+        }
+        .animation-block-3 {
+            width: 171px;
+            height: 20px;
+            top: 19px;
+            left: -4px;
+        }
+        .animation-block-4 {
+            width: 18px;
+            height: 33px;
+            top: 1px;
+            left: -22px;
+        }
+    }
+}
+
+.booking-panel {
+    .animation-block-1{
+        width: 237px;
+        height: 33px;
+        top: -34px;
+        right: -45px;
+    }
+    .animation-block-2 {
+        width: 40px;
+        height: 43px;
+        bottom: -10px;
+        left: 197px;
+    }
+    .animation-block-3 {
+        width: 222px;
+        height: 23px;
+        top: 38px;
+        left: -25px;
+    }
+    .animation-block-4 {
+        width: 26px;
+        height: 50px;
+        top: 3px;
+        left: -51px;
+    } 
+    @media (max-width: 1024px) {
+        .animation-block {
+            display: none;
+        }
+    }
+    @media (max-width: 767px) {
+        .animation-block {
+            display: block
+        }
+        .animation-block-1{
+            width: 152px;
+            height: 25px;
+            top: -27px;
+            right: -15px;
+        }
+        .animation-block-2 {
+            width: 20px;
+            height: 29px;
+            bottom: -2px;
+            left: 145px;
+        }
+        .animation-block-3 {
+            width: 149px;
+            height: 23px;
+            top: 24px;
+            left: -3px;
+        }
+        .animation-block-4 {
+            width: 21px;
+            height: 35px;
+            top: 3px;
+            left: -24px;
+        } 
+    }
+}
+
+.main-baner {
+    .animation-block {
+        display: none;
+    }
+    @media (max-width: 767px) {
+        .animation-block {
+            display: block;
+        }
+        .animation-block-1{
+            width: 67px;
+            height: 8px;
+            top: 89px;
+            right: 188px;
+            transform: rotate(-8deg);
+        }
+        .animation-block-5 {
+            width: 64px;
+            height: 8px;
+            top: 89px;
+            right: 124px;
+            transform: rotate(8deg);
+        }
+        .animation-block-2 {
+            width: 17px;
+            height: 30px;
+            bottom: 10px;
+            left: 141px;
+            transform: rotate(12deg);
+        }
+        .animation-block-3 {
+            width: 144px;
+            height: 55px;
+            top: 94px;
+            left: -4px;
+            border-bottom: 17px solid white;
+            border-radius: 47%;
+            transform: rotate(-3deg);
+            background-color: transparent;
+        }
+        .animation-block-4 {
+            width: 15px;
+            height: 26px;
+            top: 107px;
+            left: -14px;
+        } 
+    }
+}
+
+.admin-panel {
+    .animation-block {
+        display: none;
+    }
+    @media (max-width: 767px) {
+        .animation-block {
+            display: block;
+        }
+        .animation-block-1{
+            width: 100px;
+            height: 17px;
+            top: -16px;
+            right: -18px;
+        }
+        .animation-block-2 {
+            width: 28px;
+            height: 35px;
+            bottom: 1px;
+            left: 76px;
+        }
+        .animation-block-3 {
+            width: 104px;
+            height: 11px;
+            top: 20px;
+            left: -28px;
+        }
+        .animation-block-4 {
+            width: 19px;
+            height: 27px;
+            top: 3px;
+            left: -47px;
+        }
+    }
+}
+
+.advantages {
+    .animation-block {
+        display: none;
+    }
+    @media (max-width: 767px) {
+        .animation-block {
+            display: block;
+        }
+        .animation-block-1{
+            width: 123px;
+            height: 17px;
+            top: -16px;
+            right: -14px;
+        }
+        .animation-block-2 {
+            width: 22px;
+            height: 32px;
+            bottom: 5px;
+            left: 112px;
+        }
+        .animation-block-3 {
+            width: 136px;
+            height: 13px;
+            top: 20px;
+            left: -20px;
+        }
+        .animation-block-4 {
+            width: 19px;
+            height: 27px;
+            top: 2px;
+            left: -39px;      
+        }
+    }
+}
+
