--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3525,14 +3525,17 @@
             transform: rotate(12deg);
         }
         .animation-block-3 {
-            width: 144px;
-            height: 55px;
-            top: 94px;
-            left: -4px;
-            border-bottom: 17px solid white;
-            border-radius: 47%;
-            transform: rotate(-3deg);
-            background-color: transparent;
+            width: 102px;
+            height: 10px;
+            top: 130px;
+            left: -2px;
+        }
+        .animation-block-6 {
+            width: 41px;
+            height: 10px;
+            top: 125px;
+            left: 99px;
+            transform: rotate(-11deg);
         }
         .animation-block-4 {
             width: 15px;
